# simpletasks

./: .gitignore  LICENSE  README.md  pyproject.toml
jobs/: bkp.py  dfl.py  dl.py  dwv.py  mgn.py
jobs/utilities/: file_management.py  job.py
